Fix header alignment on file row

--- a/src/module/catalog/src/statistics/components/DistributionList/index.scss
+++ b/src/module/catalog/src/statistics/components/DistributionList/index.scss
@@ -58,7 +58,9 @@
 }
 .header--wrapper--right{
     justify-content: space-between;
-    padding-right: 5px;
+    .fa{
+        width: 25%;
+    }
 
 }
 
